--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/SDL-mirror"]
 	path = external/SDL-mirror
 	url = https://github.com/spurious/SDL-mirror.git
+[submodule "external/glfw"]
+	path = external/glfw
+	url = https://github.com/glfw/glfw.git
